--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
 language: java
 jdk:
   - oraclejdk8
+
+before_deploy:
+  - "mvn -DskipTests package"
+  - export JAR_FILE=$(ls target/skeleton-cli-*.jar)
+
+deploy:
+  provider: releases
+  file: "${JAR_FILE}"
