--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,14 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <distributionManagement>
+        <repository>
+            <id>bintray-ashatch-skeleton-cli</id>
+            <name>ashatch-skeleton-cli</name>
+            <url>https://api.bintray.com/maven/ashatch/skeleton-cli/[PACKAGE_NAME]/;publish=1</url>
+        </repository>
+    </distributionManagement>
+
     <dependencies>
 
         <dependency>
