--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>net.andrewhatch.skeleton-cli</groupId>
     <artifactId>skeleton-cli</artifactId>
-    <version>1.0.2</version>
+    <version>1.0.3-numerictypes-SNAPSHOT</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
