--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,11 @@ before_deploy:
 after_success:
   - mvn deploy --settings settings.xml
 
-branches:
-  only:
-    - master
-      # Build tags that match this regex in addition to building the master branch.
-    - /^skeleton-cli-[0-9]+\.[0-9]+\.[0-9]+/
+#branches:
+#  only:
+#    - master
+#      # Build tags that match this regex in addition to building the master branch.
+#    - /^skeleton-cli-[0-9]+\.[0-9]+\.[0-9]+/
 
 deploy:
   api_key:
